--- a/archive.html
+++ b/archive.html
@@ -76,11 +76,8 @@
             }
 
             .ZIROU {
-                margin: 0;
-                margin-bottom: -420px;
                 position: relative;
-                top: -200px;
-                left: 900px;
+                top: 45px;
                 border: solid 5px #ffffff;
             }
 
@@ -96,8 +93,8 @@
 
         <div>
             <h1 class="RAIN">
-                <img src="P6Dd.gif"/>  IPPEN ARCHIVE 
-                <img src="P6Dd.gif"/>
+                <img src="3IsN.gif"/>
+                IPPEN ARCHIVE
             </h1>
 
             <p style="color: #ffffff; background-color: #5393ff; font-size: 30px; text-align: center;">IPPENのARCHIVE広場。HOMEに戻るときは下のHOMEボタンへ</p>
@@ -113,8 +110,6 @@
                     <li>UNSTA3 <a href="https://twitter.com/41_insanity"/>
                         <img src="LXim.gif"/></a></li>
                     </ul>
-                    <img class="STR" src="3IsN.gif"/>
-                    <img class="ZIROU" style="width: 300px; height: 300px;" src="次郎.jfif"/>
             </p>
         </div>
             
@@ -130,6 +125,8 @@
             <p> 2021 08/29</p>
             <p><img src="hot.gif"/> <a href="https://www.google.com/search?q=%E3%81%A1%E3%82%93%E3%81%A1%E3%82%93%E4%BE%8D&rlz=1C1QABZ_jaJP886JP886&oq=%E3%81%A1%E3%82%93%E3%81%A1%E3%82%93%E4%BE%8D&aqs=chrome..69i57j0i4i37i512j0i4i37i131i433i512j0i4i37i512l5.5446j0j15&sourceid=chrome&ie=UTF-8">ちんちん侍</a> <img src="hot.gif"/> </p>
         </div>
+        <img class="ZIROU" style="width: 300px; height: 300px;" src="次郎.jfif"/>
+
         <p class="NAME" style="color: rgb(255, 255, 255); margin: 0;">
             <img src="CpJj.gif"/> <br>
             <img src="WgiA.gif"/>
