--- a/archive.html
+++ b/archive.html
@@ -8,7 +8,7 @@
 
             .RAIN{
             font-size: 100px;
-            font-weight:600;
+            font-weight:500;
             text-align: center;
             animation:rainbow 3s infinite;
             -webkit-animation:rainbow 3s infinite;
@@ -93,8 +93,10 @@
 
         <div>
             <h1 class="RAIN">
-                <img src="3IsN.gif"/>
+                <img src="P6Dd.gif"/>
                 IPPEN ARCHIVE
+                <img src="P6Dd.gif"/>
+
             </h1>
 
             <p style="color: #ffffff; background-color: #5393ff; font-size: 30px; text-align: center;">IPPENのARCHIVE広場。HOMEに戻るときは下のHOMEボタンへ</p>
