--- a/archive.html
+++ b/archive.html
@@ -8,7 +8,7 @@
 
             .RAIN{
             font-size: 100px;
-            font-weight:500;
+            font-weight:600;
             text-align: center;
             animation:rainbow 3s infinite;
             -webkit-animation:rainbow 3s infinite;
@@ -94,12 +94,11 @@
         <div>
             <h1 class="RAIN">
                 <img src="P6Dd.gif"/>
-                IPPEN ARCHIVE
+                ARCHIVE
                 <img src="P6Dd.gif"/>
-
             </h1>
 
-            <p style="color: #ffffff; background-color: #5393ff; font-size: 30px; text-align: center;">IPPENのARCHIVE広場。HOMEに戻るときは下のHOMEボタンへ</p>
+            <p style="color: #ffffff; background-color: #5393ff; font-size: 30px; text-align: center;">IPPENのARCHIVE広場。現在テスト段階。HOMEボタンで戻る</p>
             <p>
                 <img style="border: solid 5px #ff5353; width: 500px; height:500px;" src="JUMP.jfif" alt="モタク" />
                 <ul class="UNSTA">
