--- a/archive.html
+++ b/archive.html
@@ -100,7 +100,7 @@
 
             <p style="color: #ffffff; background-color: #5393ff; font-size: 30px; text-align: center;">IPPENのARCHIVE広場。現在テスト段階。HOMEボタンで戻る</p>
             <p>
-                <img style="border: solid 5px #ff5353; width: 500px; height:500px;" src="JUMP.jfif" alt="モタク" />
+                <img style="border: solid 5px #ff5353; width: 500px; height:500px;" src="S__64323598.jpg" alt="モタク" />
                 <ul class="UNSTA">
                     <li>UNSTA1 <a href="https://twitter.com/41_insanity"/>
                         <img src="LXim.gif"/></a></li>
@@ -126,7 +126,7 @@
             <p> 2021 08/29</p>
             <p><img src="hot.gif"/> <a href="https://www.google.com/search?q=%E3%81%A1%E3%82%93%E3%81%A1%E3%82%93%E4%BE%8D&rlz=1C1QABZ_jaJP886JP886&oq=%E3%81%A1%E3%82%93%E3%81%A1%E3%82%93%E4%BE%8D&aqs=chrome..69i57j0i4i37i512j0i4i37i131i433i512j0i4i37i512l5.5446j0j15&sourceid=chrome&ie=UTF-8">ちんちん侍</a> <img src="hot.gif"/> </p>
         </div>
-        <img class="ZIROU" style="width: 300px; height: 300px;" src="次郎.jfif"/>
+        <img class="ZIROU" style="width: 300px; height: 300px;" src="S__64323600.jpg"/>
 
         <p class="NAME" style="color: rgb(255, 255, 255); margin: 0;">
             <img src="CpJj.gif"/> <br>
